--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
             </div>
 			<div class="card">
-			    <img class="work-img" src="https://images.unsplash.com/photo-1462642109801-4ac2971a3a51?ixlib=rb-1.2.1&auto=format&fit=crop&w=1266&q=80">
+			    <img class="work-img" src="happy2024.jpg">
 				<a href="" target="_blank"> <!--Link to project-->
 				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
             </div>
