--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
 				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
             </div>
             <div class="card">
-			    <img class="work-img" src="https://images.unsplash.com/photo-1485815457792-d1a966f9bde0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80">
+			    <img class="work-img" src="africa-dataviz.jpg">
 				<a href="" target="_blank"> <!--Link to project-->
 				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
             </div>
             <div class="card">
-			    <img class="work-img" src="https://images.unsplash.com/photo-1517842645767-c639042777db?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
+			    <img class="work-img" src="quiz.jpg">
 				<a href="" target="_blank"> <!--Link to project-->
 				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
             </div> 
