--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
             </div>
             <div class="card">
-			    <img class="work-img" src="africa-dataviz.jpg">
+			    <img class="work-img" src="africa_dataviz.jpg">
 				<a href="" target="_blank"> <!--Link to project-->
 				<div class="work-content">Lorem ipsum dolor sit amet consectetur.</div></a>
             </div>
